Refactor billing logic, PDFs, validation, logging
Large refactor across billing services to improve readability, error handling, and consistency. Key changes:
- Validation: tightened regexes for card/expiry/cvv fields to use \d and adjusted controller response type to ResponseEntity<Object>.
- Exceptions: added CustomException.internalServerError and replaced several RuntimeException usages with CustomException helpers.
- Billing engine: extracted renewal processing into processRenewalForSubscription, clarified control flow, and added a default case comment in totals calculation.
- Subscriptions: consolidated upgrade flows (trial vs active), introduced constants (e.g. ADDON_PREFIX, DATE_FORMAT_PATTERN, UNKNOWN, STARTS_AFTER_TRIAL), standardized invoice/credit numbering, and modernized stream usage to .toList().
- PDF & reports: modularized PDF population, improved error handling to throw CustomException with HTTP 500, and normalized locales (en-IN) and MRR label usage in CSV/PDF exports.
- Notifications & logging: replaced System.out with SLF4J logger, introduced subject constant and message key constants; minor cleanup of imports and unused fields.
- Misc: simplified MockPaymentGatewayImpl random failure return, removed unused imports, and updated VSCode Java null analysis setting.
These changes improve maintainability, international formatting, and error propagation for the billing system.